# C-CPP-STL

C++_projects/exercise1-1/: CMakeLists.txt  file.cpp  main.cpp
C++_projects/exercise1-2/: CMakeLists.txt  exercise1-2.cpp
C++_projects/exercise10-1/: main.cpp
C++_projects/exercise11-1/: CMakeLists.txt  artikl.cpp  artikl.h  datum.cpp  datum.h  kosuli.cpp  kosuli.h  main.cpp  pantoloni.cpp  pantoloni.h
C++_projects/exercise12-1/: CMakeLists.txt  dvodimenzionalni.cpp  dvodimenzionalni.h  kocka.cpp  kocka.h  kvadar.cpp  kvadar.h  kvadrat.cpp  kvadrat.h  main.cpp  oblik.cpp  oblik.h  pravoagolnik.cpp  pravoagolnik.h  trodimenzionalni.cpp  trodimenzionalni.h
C++_projects/exercise13-1/: CMakeLists.txt  cicaci.cpp  cicaci.h  datum.cpp  datum.h  main.cpp  ptici.cpp  ptici.h  vlekaci.cpp  vlekaci.h  zivotno.cpp  zivotno.h
C++_projects/exercise14-1/: CMakeLists.txt  cilindar.cpp  cilindar.h  dvodimenzionalni.cpp  dvodimenzionalni.h  kocka.cpp  kocka.h  krug.cpp  krug.h  kvadar.cpp  kvadar.h  kvadrat.cpp  kvadrat.h  main.cpp  oblik.cpp  oblik.h  pravoagolnik.cpp  pravoagolnik.h  trodimenzionalni.cpp  trodimenzionalni.h
C++_projects/exercise2-1/: main.cpp
C++_projects/exercise3-1/: CMakeLists.txt  main.cpp
C++_projects/exercise3-2/: main.cpp
C++_projects/exercise4-1/: CMakeLists.txt  dropki.cpp  dropki.h  main.cpp
C++_projects/exercise5-1/: CMakeLists.txt  datum.cpp  datum.h  main.cpp  zivotno.cpp  zivotno.h
C++_projects/exercise6-1/: CMakeLists.txt  covek.cpp  covek.h  main.cpp  stedac.cpp  stedac.h
C++_projects/exercise7-1/: CMakeLists.txt  dropki.cpp  dropki.h  main.cpp
C++_projects/exercise8-1/: CMakeLists.txt  complex1.cpp  complex1.h  main.cpp
C++_projects/exercise9-1/: CMakeLists.txt  main.cpp  matrica.cpp  matrica.h
C_projects/example/: CMakeLists.txt  main.c
C_projects/exercise1/: CMakeLists.txt  exercise1-1.c
C_projects/exercise1-2/: CMakeLists.txt  exercise1-2.c
C_projects/exercise1-3/: CMakeLists.txt  exercise1-3.c
C_projects/exercise1-4/: CMakeLists.txt  exercise1-4.c
C_projects/exercise1-5/: CMakeLists.txt  exercise1-5.c
C_projects/exercise10-1/: CMakeLists.txt  exercise10-1.c
C_projects/exercise10-2/: CMakeLists.txt  exercise10-2.c
C_projects/exercise10-3/: CMakeLists.txt  exercise10-3.c
C_projects/exercise11-1/: CMakeLists.txt  exercise11-1.c
C_projects/exercise11-2/: CMakeLists.txt  exercise11-2.c
C_projects/exercise12-1/: CMakeLists.txt  exercise12-1.c
C_projects/exercise12-2/: CMakeLists.txt  exercise12-2.c
C_projects/exercise13-1/: CMakeLists.txt  exercise13-1.c
C_projects/exercise13-2/: CMakeLists.txt  exercise13-2.c
C_projects/exercise13-3/: CMakeLists.txt  exercise13-3.c
C_projects/exercise2-1/: CMakeLists.txt  exercise2-1.c
C_projects/exercise2-2/: CMakeLists.txt  exercise2-2.c
C_projects/exercise2-3/: CMakeLists.txt  exercise2-3.c
C_projects/exercise2-4/: CMakeLists.txt  exercise2-4.c
C_projects/exercise2-5/: CMakeLists.txt  exercise2-5.c
C_projects/exercise2-6/: CMakeLists.txt  exercise2-6.c
C_projects/exercise2-7/: CMakeLists.txt  exercise2-7.c
C_projects/exercise2-8/: CMakeLists.txt  exercise2-8.c
C_projects/exercise3-1/: CMakeLists.txt  exercise3-1.c
C_projects/exercise3-2/: CMakeLists.txt  exercise3-2.c
C_projects/exercise3-3/: CMakeLists.txt  exercise3-3.c
C_projects/exercise3-4/: CMakeLists.txt  exercise3-4.c
C_projects/exercise3-5/: CMakeLists.txt  exercise3-5.c
C_projects/exercise3-6/: CMakeLists.txt  exercise3-6.c
C_projects/exercise3-7/: CMakeLists.txt  exercise3-7.c
C_projects/exercise3-8/: CMakeLists.txt  exercise3-8.c
C_projects/exercise3-9/: CMakeLists.txt  exercise3-9.c
C_projects/exercise4-1/: CMakeLists.txt  exercise4-1.c
C_projects/exercise4-2/: CMakeLists.txt  exercise4-2.c
C_projects/exercise4-3/: CMakeLists.txt  exercise4-3.c
C_projects/exercise4-5/: CMakeLists.txt  exercise4-5.c
C_projects/exercise5-1/: CMakeLists.txt  exercise5-1.c
C_projects/exercise5-2/: CMakeLists.txt  exercise5-2.c
C_projects/exercise6-1/: CMakeLists.txt  exercise6-1.c
C_projects/exercise6-2/: CMakeLists.txt  exercise6-2.c
C_projects/exercise6-3/: CMakeLists.txt  exercise6-3.c
C_projects/exercise6-4/: CMakeLists.txt  exercise6-4.c
C_projects/exercise6-5/: CMakeLists.txt  exercise6-5.c
C_projects/exercise6-6/: CMakeLists.txt  exercise6-6.c
C_projects/exercise6-7/: CMakeLists.txt  exercise6-7.c
C_projects/exercise7-1/: CMakeLists.txt  exercise7-1.c
C_projects/exercise7-2/: CMakeLists.txt  exercise7-2.c
C_projects/exercise7-3/: CMakeLists.txt  exercise7-3.c
C_projects/exercise7-4a/: CMakeLists.txt  exercise7-4a.c
C_projects/exercise7-4b/: CMakeLists.txt  exercise7-4b.c
C_projects/exercise7-5a/: CMakeLists.txt  exercise7-5a.c
C_projects/exercise7-5b/: CMakeLists.txt  exercise7-5b.c
C_projects/exercise8-1/: CMakeLists.txt  exercise8-1.c
C_projects/exercise9-1/: CMakeLists.txt  exercise9-1.c
C_projects/exercise9-2/: CMakeLists.txt  exercise9-2.c
C_projects/project1/: CMakeLists.txt  project1.c
C_projects/project2/: CMakeLists.txt  project2.c
C_projects/project2-a/: CMakeLists.txt  project2-a.c
C_projects/project3/: CMakeLists.txt  project3.c
C_projects/project4/: CMakeLists.txt  project4.c
STL_projects/exercise1-1/: CMakeLists.txt  main.cpp
STL_projects/exercise1-2/: main.cpp
STL_projects/exercise1-3/: CMakeLists.txt  main.cpp
STL_projects/exercise1-4/: CMakeLists.txt  main.cpp
STL_projects/exercise1-5/: CMakeLists.txt  main.cpp
STL_projects/exercise10-1/: CMakeLists.txt  main.cpp
STL_projects/exercise10-2/: CMakeLists.txt  main.cpp
STL_projects/exercise11-1/: CMakeLists.txt  main.cpp
STL_projects/exercise2-1/: CMakeLists.txt  main.cpp
STL_projects/exercise5-2/: CMakeLists.txt  main.cpp
STL_projects/exercise5-4/: CMakeLists.txt  main.cpp
STL_projects/exercise7-1/: CMakeLists.txt  main.cpp
STL_projects/final-1/: CMakeLists.txt  main.cpp
STL_projects/final-2/: CMakeLists.txt  main.cpp
STL_projects/final-3/: CMakeLists.txt  main.cpp
STL_projects/final-4/: CMakeLists.txt  main.cpp
(+29 files in other folders)
